--- a/CryptoExplorer/View/HomeView.xaml
+++ b/CryptoExplorer/View/HomeView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:nav="clr-namespace:CryptoExplorer.State.Navigators"
              xmlns:local="clr-namespace:CryptoExplorer.View"
              mc:Ignorable="d" d:DesignWidth="800" Height="534">
     <Grid>
@@ -10,20 +11,26 @@
             <RowDefinition Height="66px" ></RowDefinition>
             <RowDefinition Name="ContentRow" Height="*"></RowDefinition>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="400px" ></ColumnDefinition>
+            <ColumnDefinition Name="ContentColumn" Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
         <Grid Grid.Row="0">
-            <TextBlock Margin="300,0,-300,0">Search</TextBlock>
-            <TextBox Width="200" Height="20" Margin="218,23,382,23"></TextBox>
+            <TextBlock>Search by name CryptoCoin:</TextBlock>
+            <TextBox x:Name="CoinSearchTextBox" Width="200" Height="20" Margin="0,23,200,23" ></TextBox>
+            <Button x:Name="CoinSearchButton" Width="60" Height="20"  Click="CoinSearchButton_Click" Margin="215,23,125,23">Search</Button>
+            <Button x:Name="RefrechListViewButton" Width="60" Height="20" Click="RefrechListViewButton_Click" Margin="280,23,60,23">Refrech</Button>
         </Grid>
-        <ListView x:Name="CoinsList" Grid.Row="1" Background="Transparent" BorderThickness="1"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
+        <ListView x:Name="CoinsList" Grid.Row="1"  Background="Transparent" BorderThickness="1" BorderBrush="Black"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.ColumnSpan="2" >
             <ListView.View>
-                <GridView>
-                    <GridViewColumn  DisplayMemberBinding="{Binding Path=Rank}" Width="100" Header="Rank"></GridViewColumn>
+                <GridView AllowsColumnReorder="False">
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Rank}"  Width="100" Header="Rank"></GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="100" Header="Name"></GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=PriceUsd}"  Width="200" Header="Price" ></GridViewColumn>
                     <GridViewColumn Width="215" Header="Details">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Width="200">Details</Button>
+                                <Button Width="200" Click="DetailsButton_Click" Tag="{Binding Path=Name}" >Details</Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
