--- a/CryptoExplorer/View/CryptoDetailsView.xaml
+++ b/CryptoExplorer/View/CryptoDetailsView.xaml
@@ -7,6 +7,35 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Name="ContentRow" Height="100"></RowDefinition>
+            <RowDefinition Height="44px" ></RowDefinition>
+            <RowDefinition Height="44px" ></RowDefinition>
+            <RowDefinition Height="44px" ></RowDefinition>
+            <RowDefinition Height="44px" ></RowDefinition>
+            <RowDefinition Height="44px" ></RowDefinition>
+            <RowDefinition Height="44px" ></RowDefinition>
+            <RowDefinition Height="44px" ></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300px"></ColumnDefinition>
+            <ColumnDefinition Width="50px"></ColumnDefinition>
+            <ColumnDefinition Width="300px"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock x:Name="CoinName" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontFamily="Georgia" FontSize="24" FontWeight="Bold"></TextBlock>
+
+        <TextBlock x:Name="CoinID" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinRank" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinSymbol" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinSupply" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinMaxSupply" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+
+        <TextBlock x:Name="CoinMarketCapUsd" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinVolumeUsd24Hr" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinPriceUsd" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinChangePercent24Hr" Grid.Row="5" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinVwap24Hr" Grid.Row="6" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
     </Grid>
 </UserControl>
