--- a/CryptoExplorer/View/HomeView.xaml
+++ b/CryptoExplorer/View/HomeView.xaml
@@ -16,21 +16,21 @@
             <ColumnDefinition Name="ContentColumn" Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid Grid.Row="0">
-            <TextBlock>Search by name CryptoCoin:</TextBlock>
-            <TextBox x:Name="CoinSearchTextBox" Width="200" Height="20" Margin="0,23,200,23" ></TextBox>
-            <Button x:Name="CoinSearchButton" Width="60" Height="20"  Click="CoinSearchButton_Click" Margin="215,23,125,23">Search</Button>
-            <Button x:Name="RefrechListViewButton" Width="60" Height="20" Click="RefrechListViewButton_Click" Margin="280,23,60,23">Refrech</Button>
+            <TextBlock FontSize="14" FontWeight="Bold" Margin="0,10,0,-10" >Search by name CryptoCoin:</TextBlock>
+            <TextBox x:Name="CoinSearchTextBox" Width="200" Height="20" Margin="0,33,200,13" ></TextBox>
+            <Button x:Name="CoinSearchButton" Width="60" Height="20"  Click="CoinSearchButton_Click" Margin="215,33,125,13">Search</Button>
+            <Button x:Name="RefrechListViewButton" Width="60" Height="20" Click="RefrechListViewButton_Click" Margin="292,33,48,13" RenderTransformOrigin="0.709,1.628">Refrech</Button>
         </Grid>
-        <ListView x:Name="CoinsList" Grid.Row="1"  Background="Transparent" BorderThickness="1" BorderBrush="Black"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.ColumnSpan="2" >
+        <ListView x:Name="CoinsList" Grid.Row="1"  Width="790" Background="Transparent" BorderThickness="1" BorderBrush="Black"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.ColumnSpan="2" >
             <ListView.View>
                 <GridView AllowsColumnReorder="False">
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Rank}"  Width="100" Header="Rank"></GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Rank}" Width="100" Header="Rank"></GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="100" Header="Name"></GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=PriceUsd}"  Width="200" Header="Price" ></GridViewColumn>
                     <GridViewColumn Width="215" Header="Details">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Width="200" Click="DetailsButton_Click" Tag="{Binding Path=Name}" >Details</Button>
+                                <Button Width="200" FontSize="14" FontWeight="Bold" Click="DetailsButton_Click" Tag="{Binding Path=Name}" >Details</Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
