--- a/CryptoExplorer/View/HomeView.xaml
+++ b/CryptoExplorer/View/HomeView.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:nav="clr-namespace:CryptoExplorer.State.Navigators"
+             xmlns:converter ="clr-namespace:CryptoExplorer.Converters"         
              xmlns:local="clr-namespace:CryptoExplorer.View"
              mc:Ignorable="d" d:DesignWidth="800" Height="534">
+    <UserControl.Resources>
+        <converter:HomeConverter x:Key="HomeConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="66px" ></RowDefinition>
@@ -21,21 +25,32 @@
             <Button x:Name="CoinSearchButton" Width="60" Height="20"  Click="CoinSearchButton_Click" Margin="215,33,125,13">Search</Button>
             <Button x:Name="RefrechListViewButton" Width="60" Height="20" Click="RefrechListViewButton_Click" Margin="292,33,48,13" RenderTransformOrigin="0.709,1.628">Refrech</Button>
         </Grid>
-        <ListView x:Name="CoinsList" Grid.Row="1"  Width="790" Background="Transparent" BorderThickness="1" BorderBrush="Black"  ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.ColumnSpan="2" >
+        <Grid Grid.Row="1" Grid.ColumnSpan="2" DataContext="{Binding Navigator}">
+            <ListView Name="CoinsList" Width="790" Background="Transparent" BorderThickness="1" BorderBrush="Black"  ScrollViewer.HorizontalScrollBarVisibility="Disabled"  >
             <ListView.View>
                 <GridView AllowsColumnReorder="False">
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Rank}" Width="100" Header="Rank"></GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="100" Header="Name"></GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path= Rank}" Width="100" Header="Rank"></GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Name}" Width="100" Header="Name"></GridViewColumn>      
                     <GridViewColumn DisplayMemberBinding="{Binding Path=PriceUsd}"  Width="200" Header="Price" ></GridViewColumn>
-                    <GridViewColumn Width="215" Header="Details">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button Width="200" FontSize="14" FontWeight="Bold" Click="DetailsButton_Click" Tag="{Binding Path=Name}" >Details</Button>
+                    <GridViewColumn Width="215" Header="Details" >
+                        <GridViewColumn.CellTemplate  >
+                                <DataTemplate>
+                                    <Button Width="200" FontSize="14" FontWeight="Bold" Command="{Binding ElementName = CoinsList, Path= DataContext.UpdateCurrentViewModelCommand}"
+                                     Tag="{Binding Path=Name}">Details
+                                        <Button.CommandParameter>
+                                            <MultiBinding Converter="{StaticResource HomeConverter}">
+                                                <Binding Source="{x:Static nav:ViewType.CryptoDetails}"/>
+                                                <Binding Path="Name"/>
+                                            </MultiBinding>
+                                        </Button.CommandParameter>
+                                    </Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
+            
+        </Grid>
     </Grid>
 </UserControl>
