--- a/CryptoExplorer/View/HomeView.xaml
+++ b/CryptoExplorer/View/HomeView.xaml
@@ -10,7 +10,7 @@
     <UserControl.Resources>
         <converter:HomeConverter x:Key="HomeConverter"/>
     </UserControl.Resources>
-    <Grid>
+    <Grid Style="{DynamicResource GridStyle}">
         <Grid.RowDefinitions>
             <RowDefinition Height="66px" ></RowDefinition>
             <RowDefinition Name="ContentRow" Height="*"></RowDefinition>
@@ -20,10 +20,10 @@
             <ColumnDefinition Name="ContentColumn" Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid Grid.Row="0">
-            <TextBlock FontSize="14" FontWeight="Bold" Margin="0,10,0,-10" >Search by name CryptoCoin:</TextBlock>
+            <TextBlock Style="{DynamicResource TextStyle}" FontSize="14" FontWeight="Bold" Margin="0,10,0,-10" >Search by name CryptoCoin:</TextBlock>
             <TextBox x:Name="CoinSearchTextBox" Width="200" Height="20" Margin="0,33,200,13" ></TextBox>
-            <Button x:Name="CoinSearchButton" Width="60" Height="20"  Click="CoinSearchButton_Click" Margin="215,33,125,13">Search</Button>
-            <Button x:Name="RefrechListViewButton" Width="60" Height="20" Click="RefrechListViewButton_Click" Margin="292,33,48,13" RenderTransformOrigin="0.709,1.628">Refrech</Button>
+            <Button Style="{DynamicResource ButtonStyle}" x:Name="CoinSearchButton" Width="60" Height="20"  Click="CoinSearchButton_Click" Margin="215,33,125,13">Search</Button>
+            <Button Style="{DynamicResource ButtonStyle}" x:Name="RefrechListViewButton" Width="60" Height="20" Click="RefrechListViewButton_Click" Margin="292,33,48,13" RenderTransformOrigin="0.709,1.628">Refrech</Button>
         </Grid>
         <Grid Grid.Row="1" Grid.ColumnSpan="2" DataContext="{Binding Navigator}">
             <ListView Name="CoinsList" Width="790" Background="Transparent" BorderThickness="1" BorderBrush="Black"  ScrollViewer.HorizontalScrollBarVisibility="Disabled"  >
@@ -35,7 +35,7 @@
                     <GridViewColumn Width="215" Header="Details" >
                         <GridViewColumn.CellTemplate  >
                                 <DataTemplate>
-                                    <Button Width="200" FontSize="14" FontWeight="Bold" Command="{Binding ElementName = CoinsList, Path= DataContext.UpdateCurrentViewModelCommand}"
+                                    <Button Style="{DynamicResource ButtonStyle}" Width="200" FontSize="14" FontWeight="Bold" Command="{Binding ElementName = CoinsList, Path= DataContext.UpdateCurrentViewModelCommand}"
                                      Tag="{Binding Path=Name}">Details
                                         <Button.CommandParameter>
                                             <MultiBinding Converter="{StaticResource HomeConverter}">
