--- a/CryptoExplorer/Resources/Styles/DarkTheme.xaml
+++ b/CryptoExplorer/Resources/Styles/DarkTheme.xaml
@@ -21,4 +21,9 @@
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontSize" Value="30"/>
     </Style>
+
+    <Style  x:Key="TextColumnStyle" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="12"/>
+    </Style>
 </ResourceDictionary>
