--- a/CryptoExplorer/Resources/Styles/WhiteTheme.xaml
+++ b/CryptoExplorer/Resources/Styles/WhiteTheme.xaml
@@ -20,4 +20,8 @@
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontSize" Value="30"/>
     </Style>
+    <Style  x:Key="TextColumnStyle" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="FontSize" Value="12"/>
+    </Style>
 </ResourceDictionary>
