--- a/CryptoExplorer/MainWindow.xaml
+++ b/CryptoExplorer/MainWindow.xaml
@@ -63,10 +63,10 @@
         <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Background="Black"/>
 
         <!--Menu-->
-        <Grid Style="{DynamicResource MenuStyle}" Name="HamburgerMenu" Grid.Row="3"  Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"
-                    Width="60" Panel.ZIndex="1"  HorizontalAlignment="Left"
+        <Grid DataContext="{Binding Navigator}" Style="{DynamicResource MenuStyle}" Name="HamburgerMenu" Grid.Row="3"  Grid.RowSpan="3" Grid.Column="0" Grid.ColumnSpan="3"
+                    Width="60" Panel.ZIndex="1"  HorizontalAlignment="Left" Tag="{Binding Hidden, Mode=TwoWay}" Height="{Binding Height, ElementName=ContentRow, Mode=OneWay}"
                     >
-            <Grid DataContext="{Binding Navigator}">
+            <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="17*"/>
                     <ColumnDefinition Width="13*"/>
@@ -82,12 +82,15 @@
                     <RowDefinition Height="60"/>
                     <RowDefinition Height="60"/>
                 </Grid.RowDefinitions>
-
-                <ToggleButton Grid.Row="0" Height="60" 
-                              Style="{StaticResource MenuButtonStyle}" Background="Black" Focusable="False" Grid.ColumnSpan="2"
+    
+                <ToggleButton Grid.Row="0" Height="60"           
+                              Style="{StaticResource MenuButtonStyle}" Width="{Binding Width, ElementName=HamburgerMenu}" 
+                              Tag="Menu" Background="Black" Focusable="False" Grid.ColumnSpan="2" HorizontalAlignment="Left"
+                              Command="{Binding ShowHideMenuCommand}" 
+                              CommandParameter="{Binding ElementName=HamburgerMenu}"
                               />
                 <RadioButton Grid.Row="1" Height="60" 
-                             GroupName="NavigationGroup"
+                             GroupName="NavigationGroup"    
                              Style="{StaticResource HomeButtonStyle}" 
                              Command="{Binding UpdateCurrentViewModelCommand}"  
                              CommandParameter="{x:Static nav:ViewType.Home}"
