--- a/CryptoExplorer/Resources/Styles/WindowButtons.xaml
+++ b/CryptoExplorer/Resources/Styles/WindowButtons.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:loc="clr-namespace:CryptoExplorer.Localizer">
+
     <!--Window buttons-->
     <Style x:Key="CloseButtonStyle" TargetType="Button">
         <Setter Property="Template">
@@ -156,7 +158,7 @@
                                 </Path>
                             </Grid>
 
-                            <TextBlock Text="Menu" Foreground="Black" FontSize="20" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                            <TextBlock Text="{x:Static loc:Resource.MainWindowMenuText}" Foreground="Black" FontSize="20" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -196,7 +198,7 @@
                                   Width="30" Height="30" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5"/>
                             </Grid>
 
-                            <TextBlock Text="Info/Settings" Foreground="Black" FontSize="18" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap"/>
+                            <TextBlock Text="{x:Static loc:Resource.MainWindowInfoSettingsText}" Foreground="Black" FontSize="18" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -238,7 +240,7 @@
                                   Width="20" Height="20" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5"/>
                             </Grid>
 
-                            <TextBlock Text="Home" Foreground="Black" FontSize="16" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap"/>
+                            <TextBlock Text="{x:Static loc:Resource.MainWindowHomeText}" Foreground="Black" FontSize="16" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -281,7 +283,7 @@
                                   Width="30" Height="30" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5"/>
                             </Grid>
 
-                            <TextBlock Text="Exchange" Foreground="Black" FontSize="16" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap"/>
+                            <TextBlock Text="{x:Static loc:Resource.MainWindowExchangeText}" Foreground="Black" FontSize="16" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" TextWrapping="Wrap"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
