--- a/CryptoExplorer/App.xaml
+++ b/CryptoExplorer/App.xaml
@@ -2,17 +2,22 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewmodel="clr-namespace:CryptoExplorer.ViewModel"
-             xmlns:view="clr-namespace:CryptoExplorer.View"
+             xmlns:view="clr-namespace:CryptoExplorer.View" 
              xmlns:local="clr-namespace:CryptoExplorer">
     <Application.Resources>
         <ResourceDictionary>
+
+
             <ResourceDictionary.MergedDictionaries>
-            
+
             <ResourceDictionary Source="/Resources/Styles/Icons.xaml" />
             <ResourceDictionary Source="/Resources/Styles/DarkTheme.xaml"/>
             <ResourceDictionary Source="/Resources/Styles/WhiteTheme.xaml"/>
             <ResourceDictionary Source="/Resources/Styles/WindowButtons.xaml" />
 
+                <ResourceDictionary>
+                    <viewmodel:ViewModelLocator x:Key="Locator"/>
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type viewmodel:HomeViewModel}">
@@ -30,6 +35,8 @@
             <DataTemplate DataType="{x:Type viewmodel:InformationViewModel}">
                 <view:InformationView/>
             </DataTemplate>
+
+            
             
         </ResourceDictionary>
     </Application.Resources>
