--- a/CryptoExplorer/View/CryptoDetailsView.xaml
+++ b/CryptoExplorer/View/CryptoDetailsView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:CryptoExplorer.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid DataContext="{Binding Coin.CryptocurrenciesDetail}">
         <Grid.RowDefinitions>
             <RowDefinition Name="ContentRow" Height="100"></RowDefinition>
             <RowDefinition Height="44px" ></RowDefinition>
@@ -18,23 +18,80 @@
             <RowDefinition Height="44px" ></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10px"></ColumnDefinition>
             <ColumnDefinition Width="300px"></ColumnDefinition>
             <ColumnDefinition Width="50px"></ColumnDefinition>
             <ColumnDefinition Width="300px"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="CoinName" Text='{Binding Path=Name}' Grid.Row="1"   Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontFamily="Georgia" FontSize="24" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinName" Text='{Binding Path=Name}' Tag="{Binding Path=Explorer}" Grid.Row="1"   Grid.Column="0" Grid.ColumnSpan="3"
+                   HorizontalAlignment="Center" FontFamily="Georgia" FontSize="24" FontWeight="Bold">
+        </TextBlock>
+        <TextBlock x:Name="CoinID"  Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left"
+                   VerticalAlignment="Center" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+            <Run Text="ID: "></Run>
+            <Run Text='{Binding Path=ID}'></Run>
+        </TextBlock>
 
-        <TextBlock x:Name="CoinID" Text='{Binding Path=ID}' Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinRank" Text='{Binding Path=Rank}' Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinSymbol" Text='{Binding Path=Symbol}' Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinSupply" Text='{Binding Path=Supply}' Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinMaxSupply" Text='{Binding Path=MaxSupply}' Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinRank" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center"
+                   FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+                        <Run Text="Rank: "></Run>
+            <Run Text='{Binding Path=Rank}'></Run>
+        </TextBlock>
 
-        <TextBlock x:Name="CoinMarketCapUsd" Text='{Binding Path=MarketCapUsd}' Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinVolumeUsd24Hr" Text='{Binding Path=VolumeUsd24Hr}' Grid.Row="3" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinPriceUsd" Text='{Binding Path=PriceUsd}'  Grid.Row="4" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinChangePercent24Hr" Text='{Binding Path=ChangePercent24Hr}' Grid.Row="5" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
-        <TextBlock x:Name="CoinVwap24Hr" Text='{Binding Path=Vwap24Hr}' Grid.Row="6" Grid.Column="2" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold"></TextBlock>
+        <TextBlock x:Name="CoinSymbol" Grid.Row="4" Grid.Column="1" 
+                   VerticalAlignment="Center" HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+            <Run Text="Symbol: "></Run>
+            <Run Text='{Binding Path=Symbol}'></Run>
+        </TextBlock>
+
+        <TextBlock x:Name="CoinSupply" Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" 
+                   HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+                 <Run Text="Supply: "></Run>
+            <Run Text='{Binding Path=Supply}'></Run>
+        </TextBlock>
+
+        <TextBlock x:Name="CoinMaxSupply"  Grid.Row="6" Grid.Column="1" VerticalAlignment="Center"
+                   HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+            <Run Text="MaxSupply: "></Run>
+            <Run Text='{Binding Path=MaxSupply}'></Run>
+        </TextBlock>
+
+        <TextBlock x:Name="CoinMarketCapUsd"  Grid.Row="2" Grid.Column="3" VerticalAlignment="Center"
+                   HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+               <Run Text="MarketCapUsd: "></Run>
+            <Run Text='{Binding Path=MarketCapUsd}'></Run>
+        </TextBlock>
+
+        <TextBlock x:Name="CoinVolumeUsd24Hr"  Grid.Row="3" Grid.Column="3" VerticalAlignment="Center"
+                   HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+             <Run Text="VolumeUsd24Hr: "></Run>
+            <Run Text='{Binding Path=VolumeUsd24Hr}'></Run>
+        </TextBlock>
+
+        <TextBlock x:Name="CoinPriceUsd"   Grid.Row="4" Grid.Column="3" VerticalAlignment="Center"
+                   HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+             <Run Text="PriceUsd: "></Run>
+            <Run Text='{Binding Path=PriceUsd}'></Run>
+        </TextBlock>
+
+        <TextBlock x:Name="CoinChangePercent24Hr" Grid.Row="5" Grid.Column="3" VerticalAlignment="Center"
+                   HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+            <Run Text="ChangePercent24Hr: "></Run>
+            <Run Text='{Binding Path=ChangePercent24Hr}'></Run>
+        </TextBlock>
+
+        <TextBlock x:Name="CoinVwap24Hr"  Grid.Row="6" Grid.Column="3" VerticalAlignment="Center"
+                   HorizontalAlignment="Left" FontFamily="Georgia" FontSize="14" FontWeight="Bold">
+              <Run Text="Vwap24Hr: "></Run>
+            <Run Text='{Binding Path=Vwap24Hr}'></Run>
+        </TextBlock>
+
+        <Button DataContext="{Binding Path=CryptoDetailsViewModel, Source={StaticResource Locator}}"  Grid.Column="3" Grid.Row="1" Width="90" Margin="0,0,210,0" 
+              Style="{DynamicResource ButtonStyle}" Command="{Binding FollowTheLinkCommand}" CommandParameter="{Binding ElementName=CoinName}">
+            Go to site</Button>
+        
+        
+
     </Grid>
 </UserControl>
