--- a/CryptoExplorer/View/InformationView.xaml
+++ b/CryptoExplorer/View/InformationView.xaml
@@ -4,9 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:nav="clr-namespace:CryptoExplorer.State.Navigators"
+             xmlns:model="clr-namespace:CryptoExplorer.ViewModel"
              xmlns:local="clr-namespace:CryptoExplorer.View"
              mc:Ignorable="d"  Width="800" Height="534">
-    <Grid Style="{DynamicResource GridStyle}" DataContext="{Binding Navigator}">
+    <Grid Style="{DynamicResource GridStyle}" DataContext="{Binding Path=InformationViewModel, Source={StaticResource Locator}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="250px" ></RowDefinition>
             <RowDefinition Height="50px" ></RowDefinition>
@@ -25,9 +26,9 @@
                    Text="This is an application for reviewing and analyzing cryptocurrencies. Which supports viewing any cryptocurrency. On the home page you can see 10 popular ones. A menu has also been created that will help you navigate the application."
                    TextWrapping="Wrap" HorizontalAlignment="Left"  FontSize="18" VerticalAlignment="Top" Height="120" Width="492" Margin="0,120,0,0" Grid.Column="1"/>
 
-        <Button Style="{DynamicResource ButtonStyle}" Command="{Binding UpdateThemeCommand}"  
-                             CommandParameter="{x:Static nav:ThemeType.Dark}" Grid.Row="1"  Grid.Column="1">Dark Theme</Button>
-        <Button Style="{DynamicResource ButtonStyle}" Command="{Binding UpdateThemeCommand}"  
-                             CommandParameter="{x:Static nav:ThemeType.White}" Grid.Row="1" Grid.Column="2" Width="100" Height="50"  >White Theme</Button>
+        <Button Command="{Binding UpdateThemeCommand}"  
+                             CommandParameter="{x:Static model:ThemeType.Dark}" Grid.Row="1"  Grid.Column="1">Dark Theme</Button>
+        <Button Command="{Binding UpdateThemeCommand}"  
+                             CommandParameter="{x:Static model:ThemeType.White}" Grid.Row="1" Grid.Column="2" Width="100" Height="50"  >White Theme</Button>
     </Grid>
 </UserControl>
